--- a/front/Pages/Login.razor
+++ b/front/Pages/Login.razor
@@ -21,17 +21,20 @@
             <form>
                 <div class="form-row">
                     <div class="col-lg-7">
-                        <input type="email" placeholder="Email"class="form-control my-3 p-2">
+                        <input type="text" @bind-value="@email" placeholder="Email"class="form-control my-3 p-2">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="col-lg-7">
-                        <input type="******" placeholder="Senha"class="form-control my-3 p-2">
+                        <input type="password" @bind-value="@password" placeholder="Senha"class="form-control my-3 p-2">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="col-lg-7">
-                        <button type="button" class="btn1 mt-3 mb-5">Login</button>
+                        <button onclick="@UserLogin">
+                        Login
+                        </button>
+
                     </div>
                 </div>
                     <a href="#">Esqueci minha senha</a>
