--- a/front/Pages/Login.razor
+++ b/front/Pages/Login.razor
@@ -26,7 +26,7 @@
                 </div>
                 <div class="form-row">
                     <div class="col-lg-7">
-                        <input type="password" @bind-value="@password" placeholder="Senha"class="form-control my-3 p-2">
+                        <input type="password" @bind-value="@password" placeholder="Senha"class="form-control my-3">
                     </div>
                 </div>
                 <div class="form-row">
